Working things around to get things working.

--- a/logstash/pipeline/puppetserver-access.conf
+++ b/logstash/pipeline/puppetserver-access.conf
@@ -1,22 +1,24 @@
 input {
   tcp {
     port => 5002
+    type => "puppetaccess"
     add_field => { "log_source" => "puppetserveraccess"}
   }
 }
 
-filter { 
-  grok {
-    match => { "message" => 
-      "%{COMBINEDAPACHELOG}"
+filter {
+  if [type] == "puppetaccess" {
+    grok {
+      match => { "message" => 
+        "%{COMBINEDAPACHELOG}"
+        }
       }
-    }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
-        timezone => "America/Detroit"
         target => "timestamp"
     }
-}
+  }
+} 
 
 output {
   elasticsearch {
