--- a/logstash/pipeline/puppetserver-log.conf
+++ b/logstash/pipeline/puppetserver-log.conf
@@ -1,6 +1,7 @@
 input {
   tcp {
     port => 5000
+    type => "puppetserver"
     codec => multiline {
       pattern => "^%{TIMESTAMP_ISO8601} "
       negate => true
@@ -10,18 +11,18 @@ input {
 }
 
 filter { 
-  grok { 
-    match => { "message" => 
-      "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:loglevel} (?<ID>\s\[.*?]|\[.*?]) (?<Source>\[.*?]) %{GREEDYDATA:message}" 
+  if [type] == "puppetserver" {
+    grok { 
+      match => { "message" => 
+        "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:loglevel} (?<ID>\s\[.*?]|\[.*?]) (?<Source>\[.*?]) %{GREEDYDATA:message}" 
       }
     }
     date {
-       match => [ "timestamp", "YYYY-MM-dd HH:mm:ss,SSS", "ISO8601"  ]
-       target => "timestamp"
+      match => [ "timestamp", "YYYY-MM-dd HH:mm:ss,SSS", "ISO8601"  ]
+      timezone => "CST6CDT"
+      target => "timestamp"
     }
-    mutate {
-      add_field => { "log_source" => "puppetserver"}
-    }
+  }
 }
 
 output {
