Added config files for console-service-api-access

--- a/logstash/pipeline/console-services-api-access-log.conf
+++ b/logstash/pipeline/console-services-api-access-log.conf
@@ -1,21 +1,21 @@
 input {
   tcp {
     port => 5001
-  }
     type => "console-services-api-access"
+  }
 }
 
 
 filter { 
-  grok { 
-    match => { "message" => 
-      "%{COMBINEDAPACHELOG}"
-      }
+  if [type] == "console-services-api-access" {
+    grok {
+      match => { "message" => "%{COMBINEDAPACHELOG}" }
     }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
         target => "timestamp"
     }
+  }
 }
 
 output {
@@ -24,5 +24,4 @@ output {
     user => "elastic"
     password => "changeme"
   }
-  stdout { codec => rubydebug }
 }
