--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - "5000:5000/udp"
       - "5001:5001/tcp"
       - "5002:5002/tcp"
+      - "5003:5003/tcp"
       - "9600:9600"
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
