Updated the filter for puppetdb access

--- a/logstash/pipeline/puppetdb-access-log.conf
+++ b/logstash/pipeline/puppetdb-access-log.conf
@@ -9,7 +9,7 @@ filter {
   if [type] == "puppetdbaccess" {
     grok {
       match => { "message" => 
-        "%{COMBINEDAPACHELOG}"
+        "%{COMBINEDAPACHELOG} %{NUMBER:D} (?<Content>-|[0-9]+)"
         }
       }
     date {
