Parse request length and duration in access logs
This commit updates the Logstash pipelines for parsing the access logs
of PE services to pick up request lengths and durations. The values of
these fields are cast to integers so that they may be summarized into
statistics such as mean, average, and percentiles.

--- a/logstash/pipeline/console-services-api-access-log.conf
+++ b/logstash/pipeline/console-services-api-access-log.conf
@@ -6,10 +6,10 @@ input {
 }
 
 
-filter { 
+filter {
   if [type] == "console-services-api-access" {
     grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
+      match => { "message" => "%{COMBINEDAPACHELOG} %{INT:duration:int}" }
     }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
