--- a/logstash/pipeline/puppetserver-access.conf
+++ b/logstash/pipeline/puppetserver-access.conf
@@ -8,8 +8,10 @@ input {
 filter {
   if [type] == "puppetaccess" {
     grok {
-      match => { "message" => 
-        "%{COMBINEDAPACHELOG}"
+      match => { "message" =>
+        # jruby_duration is optional as it was added in Puppet Server
+        # 5.3.10 and 6.5.0.
+        "%{COMBINEDAPACHELOG} %{INT:duration:int} (?:%{INT:request_bytes:int}|-) (?:%{INT:jruby_duration:int}|-)?"
         }
       }
     date {
