Commiting pending changes

--- a/logstash/pipeline/console-services-api-access-log.conf
+++ b/logstash/pipeline/console-services-api-access-log.conf
@@ -11,6 +11,11 @@ filter {
     grok {
       match => { "message" => "%{COMBINEDAPACHELOG}" }
     }
+    mutate {
+      convert => {
+        "bytes" => "integer"
+      }
+    }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
         target => "timestamp"
