--- a/logstash/pipeline/puppetdb-access-log.conf
+++ b/logstash/pipeline/puppetdb-access-log.conf
@@ -8,10 +8,14 @@ input {
 filter {
   if [type] == "puppetdbaccess" {
     grok {
-      match => { "message" => 
-        "%{COMBINEDAPACHELOG} %{NUMBER:D} (?<Content>-|[0-9]+)"
+      match => { "message" => "%{COMBINEDAPACHELOG} %{INT:duration:int}"
         }
       }
+    mutate {
+      convert => {
+        "bytes" => "integer"
+      }
+    }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
         target => "timestamp"
@@ -24,5 +28,8 @@ output {
     hosts => "elasticsearch:9200"
     user => "elastic"
     password => "changeme"
+  }
+  stdout { 
+    codec => rubydebug 
   }
 }
