--- a/logstash/pipeline/puppetserver-access.conf
+++ b/logstash/pipeline/puppetserver-access.conf
@@ -8,10 +8,14 @@ input {
 filter {
   if [type] == "puppetaccess" {
     grok {
-      match => { "message" => 
-        "%{COMBINEDAPACHELOG}"
+      match => { "message" => "%{COMBINEDAPACHELOG}"
         }
+     }
+    mutate {
+      convert => {
+        "bytes" => "integer"
       }
+    }
     date {
         match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
         target => "timestamp"
