--- a/logstash/pipeline/puppetserver-access.conf
+++ b/logstash/pipeline/puppetserver-access.conf
@@ -8,7 +8,7 @@ input {
 filter {
   if [type] == "puppetaccess" {
     grok {
-      match => { "message" => "%{COMBINEDAPACHELOG}"
+      match => { "message" => "%{COMBINEDAPACHELOG} %{NUMBER:duration:int} %{GREEDYDATA:ruby}"
         }
      }
     mutate {
