--- a/logstash/pipeline/puppetserver-log.conf
+++ b/logstash/pipeline/puppetserver-log.conf
@@ -18,7 +18,7 @@ filter {
       }
     }
     date {
-      match => [ "timestamp", "YYYY-MM-dd HH:mm:ss,SSS", "ISO8601"  ]
+      match => [ "timestamp", "YYYY-MM-dd HH:mm:ss,SSS", "ISO8601"  
       target => "timestamp"
     }
   }
